Bug fix for padding on mobile pages

--- a/styles.css
+++ b/styles.css
@@ -134,10 +134,10 @@ button {
   padding: 5rem;
 }
 
-@zmedia (max-width: 768px) {
+@media (max-width: 768px) {
 
   .page-section {
-    padding: 3rem;
+    padding: 2rem;
   }
 
 }
